--- a/android/lib/src/main/res/xml/syncadapter.xml
+++ b/android/lib/src/main/res/xml/syncadapter.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="@string/content_authority"
-    android:accountType="@string/account_type"
+    android:contentAuthority="@string/mauron85_bgloc_content_authority"
+    android:accountType="@string/mauron85_bgloc_account_type"
     android:userVisible="false"
     android:supportsUploading="true"
     android:allowParallelSyncs="false"
